# llm-council

./: .gitignore  CLAUDE.md  README.md  SLIK AI Creative Effectiveness Prompt Draft - 04-02-2026 (1).md  SLIK AI Creative Effectiveness Prompt Draft - 04-02-2026.txt  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  start.ps1  vercel.json
api/: index.py  requirements.txt  upload.js
backend/: auth.py  config.py  council.py  creative_router.py  documents.py  gemini.py  llm.py  main.py  openrouter.py  payments.py
backend/creative_effectiveness/: __init__.py  evaluation.py  framework.py  models.py  roles.py  validation.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  main.jsx
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  EvaluationForm.css  EvaluationForm.jsx  EvaluationFormExtra.css  FinalReport.css  FinalReport.jsx  PaywallGate.css  PaywallGate.jsx  RoleResults.css  RoleResults.jsx  Sidebar.css  Sidebar.jsx  WizardChat.css  WizardChat.jsx
frontend/src/utils/: exportUtils.js
