[project]
name = "llm-council"
version = "0.1.0"
description = "Your LLM Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.95.0, <1.0.0",
    "pydantic>=1.10.14, <2.0.0",
    "uvicorn[standard]>=0.22.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.24.0",
    "pdfplumber>=0.10.0",
    "python-multipart>=0.0.6",
]
